--- a/google-books/package.json
+++ b/google-books/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "dotenv": "^10.0.0",
     "react": "^16.6.3",
     "react-bootstrap": "^1.6.0",
     "react-dom": "^16.6.3",
